CLIENT-916: add transaction ID to pop-ups

--- a/src/modules/ui/directives/transactionInfo/types/exchange.html
+++ b/src/modules/ui/directives/transactionInfo/types/exchange.html
@@ -21,3 +21,8 @@
          params="{name: $ctrl.transaction.amount.asset.name}"></div>
     <div class="txinfo__value">{{::$ctrl.transaction.price.toFormat()}} {{::$ctrl.transaction.price.pair.priceAsset.name}}</div>
 </div>
+
+<div class="txinfo__row">
+    <div class="txinfo__key" w-i18n="transaction.modals.txId"></div>
+    <div class="txinfo__value">{{::$ctrl.transaction.id}}</div>
+</div>
