--- a/src/modules/ui/directives/transactionInfo/types/tokens.html
+++ b/src/modules/ui/directives/transactionInfo/types/tokens.html
@@ -18,3 +18,8 @@
     <div class="txinfo__key" w-i18n="transaction.modals.description"></div>
     <div class="txinfo__value txinfo__text">{{::$ctrl.transaction.description}}</div>
 </div>
+
+<div class="txinfo__row">
+    <div class="txinfo__key" w-i18n="transaction.modals.txId"></div>
+    <div class="txinfo__value">{{::$ctrl.transaction.id}}</div>
+</div>
