--- a/src/modules/ui/directives/transactionInfo/types/cancel-leasing.html
+++ b/src/modules/ui/directives/transactionInfo/types/cancel-leasing.html
@@ -12,3 +12,8 @@
     <div class="txinfo__key" w-i18n="transaction.modals.cancelTx"></div>
     <div class="txinfo__value">{{::$ctrl.transaction.leaseTransactionId}}</div>
 </div>
+
+<div class="txinfo__row">
+    <div class="txinfo__key" w-i18n="transaction.modals.txId"></div>
+    <div class="txinfo__value">{{::$ctrl.transaction.id}}</div>
+</div>
