--- a/src/modules/ui/directives/transactionInfo/types/create-alias.html
+++ b/src/modules/ui/directives/transactionInfo/types/create-alias.html
@@ -1,3 +1,8 @@
 <div class="txinfo__lead">
     <h3 class="basic-700">{{::$ctrl.transaction.alias}}</h3>
 </div>
+
+<div class="txinfo__row">
+    <div class="txinfo__key" w-i18n="transaction.modals.txId"></div>
+    <div class="txinfo__value">{{::$ctrl.transaction.id}}</div>
+</div>
