--- a/src/modules/ui/directives/transactionInfo/types/lease.html
+++ b/src/modules/ui/directives/transactionInfo/types/lease.html
@@ -11,4 +11,9 @@
     <div class="txinfo__value">{{::$ctrl.shownAddress}}</div>
 </div>
 
+<div class="txinfo__row">
+    <div class="txinfo__key" w-i18n="transaction.modals.txId"></div>
+    <div class="txinfo__value">{{::$ctrl.transaction.id}}</div>
+</div>
+
 <!--TODO : isActive-->
