--- a/src/modules/ui/directives/transactionInfo/types/transfer.html
+++ b/src/modules/ui/directives/transactionInfo/types/transfer.html
@@ -21,56 +21,63 @@
 
 </div>
 
+<div class="txinfo__data">
+    <div class="txinfo__row">
+        <div class="txinfo__key" w-i18n="transaction.modals.txId"></div>
+        <div class="txinfo__value">{{::$ctrl.transaction.id}}</div>
+    </div>
+</div>
+
 <div ng-if="::$ctrl.type !== 'circular'" class="txinfo__data">
-<div ng-if="::$ctrl.type === 'mass-send'" ng-init="$ctrl.showAllTX = false">
+    <div ng-if="::$ctrl.type === 'mass-send'" ng-init="$ctrl.showAllTX = false">
 
-    <div ng-if="$ctrl.showAllTX">
-        <div class="txinfo__row" ng-repeat="transfer in $ctrl.transaction.transfers track by transfer.recipient">
-            <div class="txinfo__key-mass">{{::transfer.recipient}}</div>
-            <div class="txinfo__value">
-                <w-balance money="::transfer.amount"></w-balance>
-            </div>
-        </div>
-    </div>
-
-    <div ng-if="!$ctrl.showAllTX">
-
-        <div class="txinfo__row" ng-if="::$ctrl.transaction.transfers[0]">
-            <div class="txinfo__key-mass">{{::$ctrl.transaction.transfers[0].recipient}}</div>
-            <div class="txinfo__value">
-                <w-balance money="::$ctrl.transaction.transfers[0].amount"></w-balance>
-            </div>
-        </div>
-        <div class="txinfo__row" ng-if="::$ctrl.transaction.transfers[1]">
-            <div class="txinfo__key-mass">{{::$ctrl.transaction.transfers[1].recipient}}</div>
-            <div class="txinfo__value">
-                <w-balance money="::$ctrl.transaction.transfers[1].amount"></w-balance>
-            </div>
-        </div>
-        <div class="txinfo__row" ng-if="::$ctrl.transaction.transfers[2]">
-            <div class="txinfo__key-mass">{{::$ctrl.transaction.transfers[2].recipient}}</div>
-            <div class="txinfo__value">
-                <w-balance money="::$ctrl.transaction.transfers[2].amount"></w-balance>
+        <div ng-if="$ctrl.showAllTX">
+            <div class="txinfo__row" ng-repeat="transfer in $ctrl.transaction.transfers track by transfer.recipient">
+                <div class="txinfo__key-mass">{{::transfer.recipient}}</div>
+                <div class="txinfo__value">
+                    <w-balance money="::transfer.amount"></w-balance>
+                </div>
             </div>
         </div>
 
-    </div>
+        <div ng-if="!$ctrl.showAllTX">
 
-    <div class="txinfo__row txinfo__row-padder"
-         ng-if="$ctrl.transaction.transfers.length && $ctrl.transaction.transfers.length > 3">
+            <div class="txinfo__row" ng-if="::$ctrl.transaction.transfers[0]">
+                <div class="txinfo__key-mass">{{::$ctrl.transaction.transfers[0].recipient}}</div>
+                <div class="txinfo__value">
+                    <w-balance money="::$ctrl.transaction.transfers[0].amount"></w-balance>
+                </div>
+            </div>
+            <div class="txinfo__row" ng-if="::$ctrl.transaction.transfers[1]">
+                <div class="txinfo__key-mass">{{::$ctrl.transaction.transfers[1].recipient}}</div>
+                <div class="txinfo__value">
+                    <w-balance money="::$ctrl.transaction.transfers[1].amount"></w-balance>
+                </div>
+            </div>
+            <div class="txinfo__row" ng-if="::$ctrl.transaction.transfers[2]">
+                <div class="txinfo__key-mass">{{::$ctrl.transaction.transfers[2].recipient}}</div>
+                <div class="txinfo__value">
+                    <w-balance money="::$ctrl.transaction.transfers[2].amount"></w-balance>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="txinfo__row txinfo__row-padder"
+             ng-if="$ctrl.transaction.transfers.length && $ctrl.transaction.transfers.length > 3">
             <span class="link"
                   ng-click="$ctrl.showAllTX = !$ctrl.showAllTX"
                   params="{count: $ctrl.transaction.transfers.length}"
                   w-i18n="transaction.modals.massSend.showAll.{{$ctrl.showAllTX}}"></span>
-    </div>
+        </div>
 
-    <div class="txinfo__row">
-        <div class="txinfo__key" w-i18n="transaction.modals.massSend.totalAmount"></div>
-        <div class="txinfo__value">
-            <w-i18n params="{money: $ctrl.transaction.totalAmount}">money-currency</w-i18n>
+        <div class="txinfo__row">
+            <div class="txinfo__key" w-i18n="transaction.modals.massSend.totalAmount"></div>
+            <div class="txinfo__value">
+                <w-i18n params="{money: $ctrl.transaction.totalAmount}">money-currency</w-i18n>
+            </div>
         </div>
     </div>
-</div>
 </div>
 
 <div class="txinfo__row txinfo__row-contains-text" ng-if="::$ctrl.transaction.attachment">
